# rogi-xd

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Makefile  README.md  environment.yml  outline.txt  plots.ipynb  pyproject.toml  requirements.txt  setup.cfg  zinc.test.txt
models/GIN/zinc/: model.json  model.pt
models/gin/zinc/: model.json  model.pt
models/vae/zinc/: model.json  model.pt
notebooks/: README.md  auc.ipynb  correlation.ipynb  neighbors.ipynb  rogi-dist.ipynb  toy_examples.ipynb  toy_surfaces.ipynb
pcmr/: chem-gpt.py  chemberta.py  cli.py  data.py  exceptions.py  rogi.py  utils.py
pcmr/cli/: args.py  coarse_grain.py  command.py  cross_val.py  finetune.py  list.py  main.py  rogi.py  train.py  utils.py
pcmr/cli/utils/: __init__.py  args.py  records.py
pcmr/data/: __init__.py  base.py  composite.py  data.py  dockstring.py  guacamol.py  molnet.py  tdc.py
pcmr/featurizers/: __init__.py  base.py  bert.py  chemberta.py  chemgpt.py  desc.py  fingerprint.py  fp.py  gpt.py  hf.py  lit.py  llms.py  mixins.py  random.py
pcmr/models/: mixins.py  utils.py
pcmr/models/gin/: __init__.py  data.py  model.py
pcmr/models/vae/: __init__.py  config.py  data.py  model.py  modules.py  regularizers.py  samplers.py  schedulers.py  tokenizer.py  utils.py
pcmr/utils/: __init__.py  config.py  registry.py  rogi.py  utils.py
results/raw/: GIN.csv  VAE.csv
results/raw/cg/sample/: GIN.json  VAE.json  chemberta.json  chemgpt.json  descriptor.json
results/raw/rogi/dockstring/: GIN.csv  VAE.csv  chemberta.csv  descriptor.csv
results/raw/rogi/tdc/: GIN.csv  VAE.csv  chemberta.csv  chemgpt.csv  desc.csv
results/raw/tdc/: chemgpt.csv  desc.csv
rogi_xd/: _version.py  knn.py  rogi.py  rogi_.py
rogi_xd/cli/: finetune.py  knn.py  list.py  main.py  rogi.py  train.py
rogi_xd/cli/utils/: args.py  records.py
rogi_xd/data/: __init__.py  base.py  composite.py  dockstring.py  guacamol.py  molnet.py  tdc.py
rogi_xd/featurizers/: __init__.py  base.py  desc.py  fp.py  hf.py  lit.py  mixins.py  random.py
rogi_xd/models/gin/: model.py
rogi_xd/utils/: exceptions.py  registry.py  rogi.py  utils.py
scripts/: all.sh  cg.sh  cv.sh  datasets.all.txt  dockstring.txt  rogi.sh  sample.txt  tdc+guac.txt
tests/: test_rogi.py
tests/data/: test_guacamol.py
