[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "pcmr/_version.py"

[tool.black]
line-length = 100
target-version = ["py39"]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
addopts = "--cov pcmr"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py",
]