[metadata]
name = rogiLE
version = 0.0.1
author = david graff
author_email = deg711@g.harvard.edu
description = roughness with learned embeddings
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
url = https://github.com/coleygroup/doce
platforms = Linux, Mac OS-X, Unix

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
	

[options.entry_points]
console_scripts = 
	doce = doce.cli.main:main

[options.extras_require]
dev =
	black
	bumpversion
	flake8
	pre-commit
	pytest
	pytest-cov
plot =
	matplotlib
	seaborn
test =
	pytest
	pytest-cov
