[metadata]
name = rogi_xd
version = 0.0.1
author = david graff
author_email = deg711@g.harvard.edu
description = evaluating chemical foundation models through the lens of QSPR surface roughness
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
url = https://github.com/coleygroup/rogi-xd
platforms = Linux

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
	ae_utils @ git+ssh://git@github.com:davidegraff/autoencoders.git
	fastcluster
	numpy
	PyTDC
	pytorch_lightning
	rdkit >= 2022.9.4
	scipy
	selfies
	sklearn
	torch <= 1.13
	torchdrug
	transformers
	typing_extensions

[options.entry_points]
console_scripts =
    rogi_xd = rogi_xd.cli.main:main
	
[options.extras_require]
dev =
	black
	flake8
	pytest
	pytest-cov
plot =
	matplotlib
	seaborn
test =
	pytest
	pytest-cov
